<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login"
    android:background="@drawable/bg"
    android:padding="15dp">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/icon1"
        tools:ignore="ContentDescription" />

    <TextView
        android:text="@string/login"
        android:textColor="@color/kuning"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registerNow"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/kuning"
        android:text="@string/klik_untuk_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>